...
        style={{
          alignSelf: 'center',
          fontSize: 26,
          marginBottom: 10,
          fontWeight: '500',
        }}
        testID="WelcomeText">
        Hey, {user?.email}
      </Text>
      <Button
        mode="contained"
        onPress={async () => {
          logout().catch((err) => {
...
        style={{
          margin: 10,
          paddingVertical: 10,
          width: 150,
          alignSelf: 'center',
        }}
        testID="LogoutButton">
        Log Out
      </Button>
      <TextInput
        label="Post Name"
        value={title}
        onChangeText={(title) => setTitle(title)}
...
